WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137346
XMLHttpRequestProgressEventThrottle shouldn't throttle / defer progress events if there are no listeners
https://bugs.webkit.org/show_bug.cgi?id=137346
Summary
XMLHttpRequestProgressEventThrottle shouldn't throttle / defer progress event...
Chris Dumez
Reported
2014-10-02 10:18:27 PDT
Currently XMLHttpRequestProgressEventThrottle throttles / defers progress events, which involves queueing events and starting timers, even if there are no listeners for those events (which is fairly common case). XMLHttpRequestProgressEventThrottle should probably make sure there are actual progress event listeners *before* attempting to throttle and do extra processing, to avoid doing unnecessary work.
Attachments
Patch
(4.26 KB, patch)
2014-10-02 10:26 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(4.26 KB, patch)
2014-10-02 14:49 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(4.26 KB, patch)
2014-10-02 15:04 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2014-10-02 10:26:01 PDT
Created
attachment 239115
[details]
Patch
WebKit Commit Bot
Comment 2
2014-10-02 14:06:23 PDT
Comment on
attachment 239115
[details]
Patch Rejecting
attachment 239115
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 239115, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: 0-ab3c-d52691b4dbfc ... Currently at 174225 = a9c60c9b741ac30a2f769833b0aeea2f361320d3
r174226
= f129dfb30e1254234bad57b1072ca57cd3838f9e
r174227
= edfffb339c4730c2b8660dea895a3b5cf64fc57e
r174228
= 752bfea457a49ab2bf1d3b065f72d1fa17068ad2
r174230
= 76858a153f995014ed68a9a46de7a0ad135cc8ed Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.appspot.com/results/6070769062772736
Chris Dumez
Comment 3
2014-10-02 14:49:42 PDT
Created
attachment 239142
[details]
Patch
Chris Dumez
Comment 4
2014-10-02 15:04:52 PDT
Created
attachment 239145
[details]
Patch
Chris Dumez
Comment 5
2014-10-02 15:05:29 PDT
Comment on
attachment 239145
[details]
Patch Fixed a typo in the title.
WebKit Commit Bot
Comment 6
2014-10-02 15:49:23 PDT
Comment on
attachment 239145
[details]
Patch Clearing flags on attachment: 239145 Committed
r174235
: <
http://trac.webkit.org/changeset/174235
>
WebKit Commit Bot
Comment 7
2014-10-02 15:49:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug